# volaura

./: .gitignore  CMakeLists.txt
_deploy/: inspect.js  package-lock.json  package.json  privacy.html  probe.js  read_env.js  root.html  set_baseurl.js  terms.html
assets/: README.txt
installer/: LICENSE.txt  LICENSE_de.txt  LICENSE_en.txt  LICENSE_es.txt  LICENSE_fr.txt  installer.iss  installer.iss.bak  make-assets.ps1  make-images.ps1
resources/: app.rc  icons.qrc
server/admin/: .env.example  .gitignore  README.md  package.json  server.js
server/admin/deploy/: volaura-admin.service
server/admin/public/admin/: app.js  index.html  style.css
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/audio/: audio_controller.cpp  audio_controller.h  audio_processor.cpp  audio_processor.h  noise_suppressor.cpp  noise_suppressor.h  opus_codec.cpp  opus_codec.h
src/crypto/: e2e_crypto.cpp  e2e_crypto.h
src/network/: signaling_client.cpp  signaling_client.h  update_checker.cpp  update_checker.h
src/ui/: notification_center.cpp  notification_center.h
vps-server/: .env.example  .gitignore  db.js  email.js  env.production.example  legal.js  package.json  server.js
